feat: Channel Mapper 작성, Channel Service 작성